--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,28 +28,61 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bot_toast: ^4.1.3
+  cached_network_image: ^3.4.1
+  connectivity_plus: ^6.1.3
+  cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
+  device_info_plus: ^11.3.2
+  dio: ^5.8.0+1
+  dio_smart_retry: ^7.0.1
+  equatable: ^2.0.7
+  file_picker: ^9.0.2
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-
+  flutter_bloc: ^9.1.0
+  flutter_localizations:
+    sdk: flutter
+  flutter_rating_bar: ^4.0.1
+  flutter_screenutil: ^5.9.3
+  flutter_svg: ^2.0.17
+  fluttertoast: ^8.2.12
+  get_it: ^8.0.3
+  get_storage: ^2.1.1
+  google_nav_bar: ^5.0.7
+  hive_ce: ^2.10.1
+  hive_ce_flutter: ^2.2.0
+  iconsax_flutter: ^1.0.0
+  image_picker: ^1.1.2
+  intl: ^0.19.0
+  intl_phone_field: ^3.2.0
+  network_info_plus: ^6.1.3
+  permission_handler: ^11.4.0
+  pin_code_fields: ^8.0.1
+  pretty_dio_logger: ^1.4.0
+  shimmer: ^3.0.0
+  timeago: ^3.7.0
+  vector_graphics: ^1.1.18
 dev_dependencies:
+  build_runner: ^2.4.6
+  flutter_gen: ^5.10.0
+  flutter_gen_runner: ^5.10.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^3.0.0-0.0.dev
+  hive_ce_generator: ^1.8.2
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  json_serializable: ^6.7.1
+flutter_gen:
+  output: lib/gen/ # Optional (default: lib/gen/)
+  line_length: 80 # Optional (default: 80)
+  integrations:
+    image: true
+    flutter_svg: true
+    rive: true
+    lottie: true
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
 
   # The following line ensures that the Material Icons font is
@@ -58,10 +91,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/images/
+    - assets/icons/
+    - assets/translation/
+    - assets/fonts/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
