--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  flutter_html: ^3.0.0
   flutter_localizations:
     sdk: flutter
   flutter_rating_bar: ^4.0.1
@@ -63,6 +64,7 @@ dependencies:
   pretty_dio_logger: ^1.4.0
   shimmer: ^3.0.0
   timeago: ^3.7.0
+  url_launcher: ^6.3.1
   vector_graphics: ^1.1.18
 dev_dependencies:
   build_runner: ^2.4.6
